2001-07-18  Yuuichi Teranishi  <teranisi@gohome.org>

	* elservd: Removed.

	* elservd.in: New file.

	* Makefile (GOMI): Added elservd.

	* ELSERV-MK (config-ruby): New function.
	(config-elserv): Call `config-ruby'.
	(config-elserv-package): Ditto.

	* COPYING: New file.

	* es-wiki.el (elserv-wiki-function): Redirect "" to "/".

	* es-mhc.el (elserv-mhc-function): Don't cause an error when
	month is "".

	* es-demo.el (elserv-demo-publish): Changed name for upload.

	* elserv.el (elserv-make-redirect): Added argument `result'.
	(elserv-service-directory): Follow change above.
	(elserv-service-function): Don't redirect here.

	* ELSERV-MK: Check whether ruby is installed or not.

2001-07-17  OHASHI Akira  <bg66@koka-in.org>

        * elserv-autoindex.el (elserv-autoindex): Simplify.
        (elserv-autoindex-get-icon): Don't use `assoc-if'.

2001-07-17  Yuuichi Teranishi  <teranisi@gohome.org>

	* elserv.el (toplevel): Enclose autoloading elserv-autoindex
	definition with eval-and-compile.

	* elserv-autoindex.el (elserv-autoindex): Don't use delete-if.

	* ELSERV-MK, ELSERV-ELS, ELSERV-CFG, Makefile: New files.

	* web-custom.el (toplevel): Require mcharset.
	(web-custom-option-body): Use elserv-replace-in-string.

	* es-mhc.el (elserv-mhc/path, elserv-mhc/icon-image-alist): Moved
	definition.
	(elserv-mhc-article-function): Added local binding `charset'.

	* elserv.el (elserv-daemon-name): Setup default for XEmacs package.
	(elserv-icon-path): Set default value.
	(elserv-service-directory): Set argument `result'.
	(elserv-replace-in-string): New function.

	* elserv-autoindex.el (toplevel): Require elserv.
	(elserv-autoindex): Added argument `result'.

2001-07-17  OHASHI Akira  <bg66@koka-in.org>

        * elserv-autoindex.el (elserv-autoindex): Fix regexp.
        (elserv-autoindex-get-icon): Fix directory handling.

2001-07-16  Yuuichi Teranishi  <teranisi@gohome.org>

	* es-wiki.el (elserv-wiki-search-page): Rewrite for latest emacs-wiki.